# absinthe

./: .clang-format  CMakeLists.txt  LICENSE  README.md  changelog.txt  conanfile.txt
.github/workflows/: develop.yml
cmake/: CPM.cmake  Findlibimobiledevice.cmake  Findlibplist.cmake
gui/: CMakeLists.txt
include/: constants.h  constants.hpp  debug.h  defines.hpp  endianness.hpp  fsgen-global-constants.h.bak  fsgen-global-constants.hpp  fsgen-mac-defines.h  fsgen-mac-defines.hpp  fswrapper.h.in  version.h.in
include/config/iOS/5.0.1/iPhone3,1/: constants.hpp
include/config/iOS/5.0.1/iPhone4,1/: constants.hpp
include/defines/: linux.hpp  osx.hpp  windows.hpp
include/opt/: Makefile.txt
include/opt/iPad2,1/9A405/: offsets.hpp
include/opt/iPhone3,1/9A405/: offsets.hpp
include/opt/iPhone4,1/9A405/: offsets.hpp
include/opt/iPhone4,1/9A406/: offsets.hpp
src/: CMakeLists.txt  backup_file.c  idevicebackup2.c  mb2.cpp  mb2.h  mb2.hpp  template.cpp  template.h  template.hpp
src/backup/: CMakeLists.txt  backup.c  backup.cpp  backup.h  backup.hpp  backup_file.cpp  backup_file.h  backup_file.hpp  mbdb.c  mbdb.cpp  mbdb.hpp  mbdb_record.cpp  mbdb_record.hpp
src/cli/: CMakeLists.txt  absinthe.c  absinthe.cpp  absinthe.h  absinthe.hpp
src/core/: CMakeLists.txt  fsgen-global-constants.h  fsgen-mac-defines.h  fsgen.c  fsgen.cpp  fsgen.hpp  jailbreak.c  jailbreak.cpp  jailbreak.h  jailbreak.hpp
src/crashreport/: CMakeLists.txt  afc.cpp  afc.h  afc.hpp  crashreport.cpp  crashreport.hpp  crashreportcopy.cpp  crashreportcopy.h  crashreportcopy.hpp  crashreporter.cpp  crashreporter.hpp  crashreportmover.cpp  crashreportmover.hpp
src/dyld/: CMakeLists.txt  dyldcache.c  dyldcache.cpp  dyldcache.h  dyldcache.hpp  dyldimage.c  dyldimage.cpp  dyldimage.h  dyldimage.hpp  dyldmap.c  dyldmap.cpp  dyldmap.h  dyldmap.hpp
src/gui/: AbsintheJailbreaker.cpp  AbsintheJailbreaker.h  AbsintheJailbreaker.hpp  AbsintheMainWnd.h  AbsintheMainWnd.hpp  AbsintheMainWnd_linux.cpp  AbsintheMainWnd_osx.cpp  AbsintheMainWnd_win32.cpp  AbsintheWorker.cpp  AbsintheWorker.h  AbsintheWorker.hpp  CMakeLists.txt  device_types.hpp  iTunesKiller.cpp  iTunesKiller.hpp  main.cpp
src/iOS/cleanup/: cleanup.m
src/iOS/filemover/: filemover.cpp
src/macho/: CMakeLists.txt  macho.cpp  macho.h  macho.hpp  macho_command.cpp  macho_command.h  macho_command.hpp  macho_section.cpp  macho_section.h  macho_section.hpp  macho_segment.cpp  macho_segment.h  macho_segment.hpp  macho_symbol.cpp  macho_symbol.h  macho_symbol.hpp  macho_symtab.cpp  macho_symtab.h  macho_symtab.hpp
src/util/: CMakeLists.txt  bpatch.c  bpatch.cpp  bpatch.h  bpatch.hpp  common.c  common.cpp  common.h  common.hpp  device.c  device.cpp  device.h  device.hpp  dictionary.cpp  dictionary.hpp  file.cpp  file.h  file.hpp  idevicebackup2.c  idevicebackup2.cpp  idevicebackup2.hpp  lockdown.cpp  lockdown.h  lockdown.hpp  mb1.c  mb1.cpp  mb1.h  mb1.hpp  plist_extras.c  plist_extras.cpp  plist_extras.hpp  rop.c  rop.cpp  rop.h  rop.hpp
tools/: CMakeLists.txt  rop.c  rop.cpp  rop.hpp
tools/binpatch/: CMakeLists.txt  binpatch.cpp
tools/config/iOS/5.0.1/iPhone4,1/: constants.hpp
tools/decache/: CMakeLists.txt  decache.cpp
tools/dyldrop/: CMakeLists.txt  dyldrop.cpp
tools/fsgen/: CMakeLists.txt  fsgen.cpp
tools/gizmo/: CMakeLists.txt  gizmo.cpp
tools/handoff/: CMakeLists.txt  handoff.cpp
tools/injectconf/: CMakeLists.txt  injectconf.cpp
tools/machoman/: CMakeLists.txt  machoman.cpp
tools/mb2insert/: CMakeLists.txt  mb2insert.cpp
tools/mbdbtool/: CMakeLists.txt  mbdbtool.cpp
tools/pointingdb/: CMakeLists.txt  pointingdb.cpp
tools/switchapp/: CMakeLists.txt  switchapp.cpp
