
file(GLOB SRC_FILES "*.c" "*.h")
add_executable(absinthe_tool_injectconf ${SRC_FILES})

# injectconf_SOURCES = \
# 				injectconf.c \
# 				../src/device.c \
# 				../src/common.c \
# 				../src/idevicebackup2.c \
# 				../src/backup.c \
# 				../src/backup_file.c \
# 				../src/plist_extras.c \
# 				../src/file.c \
# 				../src/mbdb.c \
# 				../src/mbdb_record.c
				